--- a/config.yaml
+++ b/config.yaml
@@ -17,9 +17,9 @@ menu:
     - name: About
       url: /about/
     - name: GitHub
-      url: https://github.com/nashsauter1
-    - name: Twitter
-      url: https://twitter.com/nashsauter
+      url: https://github.com/nashsauter1/rblog
+    - name: Instagram
+      url: https://instagram.com/nashsauter
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
