--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ ignoreFiles:
   - \.knit\.md$
   - \.utf8\.md$
 permalinks:
-  post: /:year/:month/:day/:slug/
+  post: /:year/:slug/
 menu:
   main:
     - name: About
