--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,9 @@
 baseurl: /
 languageCode: en-us
 title: Nash's Blog
-theme: hugo-lithium
+theme:
+  - hugo-lithium
+  - hugo-cite
 googleAnalytics: ''
 disqusShortname: ''
 ignoreFiles:
